# fast-histogram

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  asv.conf.json  azure-pipelines.yml  index.json  info.json  meson.build  pyproject.toml  regressions.json  regressions.xml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: release.yml
.github/workflows/: main.yml
benchmarks/: benchmarks.py
comparison/: README.rst  benchmark.py  plot.py
fast_histogram/: __init__.py  _histogram_core.c  histogram.py  histogram_cython.pyx  meson.build
fast_histogram/tests/: test_histogram.py
graphs/arch-x86_64/branch-master/cpu-Intel(R) Celeron(R) CPU N3450 @ 1.10GHz/cython/machine-oneesk/nomkl/numpy-1.14/os-Ubuntu 16.04.3 LTS/python-3.6/ram-3885480/: summary.json
graphs/summary/: benchmarks.Histogram1D.time_histogram1d.json  benchmarks.Histogram1D.time_histogram1d_weights.json  benchmarks.Histogram2D.time_histogram2d.json  benchmarks.Histogram2D.time_histogram2d_weights.json
results/: benchmarks.json
results/oneesk/: 0bd667e2-conda-py3.6-cython-nomkl-numpy1.14.json  10760777-conda-py3.6-cython-nomkl-numpy1.14.json  11a4d1e3-conda-py3.6-cython-nomkl-numpy1.14.json  123c2508-conda-py3.6-cython-nomkl-numpy1.14.json  1cce9e12-conda-py3.6-cython-nomkl-numpy1.14.json  1d06938b-conda-py3.6-cython-nomkl-numpy1.14.json  22d900be-conda-py3.6-cython-nomkl-numpy1.14.json  304c512d-conda-py3.6-cython-nomkl-numpy1.14.json  3797e5c3-conda-py3.6-cython-nomkl-numpy1.14.json  3d9de89e-conda-py3.6-cython-nomkl-numpy1.14.json  3de40da3-conda-py3.6-cython-nomkl-numpy1.14.json  3f4a8fe4-conda-py3.6-cython-nomkl-numpy1.14.json  3f831fb8-conda-py3.6-cython-nomkl-numpy1.14.json  46b96c1c-conda-py3.6-cython-nomkl-numpy1.14.json  4806274b-conda-py3.6-cython-nomkl-numpy1.14.json  49ff7609-conda-py3.6-cython-nomkl-numpy1.14.json  502b4afe-conda-py3.6-cython-nomkl-numpy1.14.json  51991b53-conda-py3.6-cython-nomkl-numpy1.14.json  56a839a4-conda-py3.6-cython-nomkl-numpy1.14.json  5762c3b1-conda-py3.6-cython-nomkl-numpy1.14.json  58cf5cec-conda-py3.6-cython-nomkl-numpy1.14.json  5da5e01c-conda-py3.6-cython-nomkl-numpy1.14.json  5e5b5820-conda-py3.6-cython-nomkl-numpy1.14.json  5f13ec40-conda-py3.6-cython-nomkl-numpy1.14.json  5f874ea8-conda-py3.6-cython-nomkl-numpy1.14.json  622a34ca-conda-py3.6-cython-nomkl-numpy1.14.json  66c9ab35-conda-py3.6-cython-nomkl-numpy1.14.json  689d9503-conda-py3.6-cython-nomkl-numpy1.14.json  6f7a3ceb-conda-py3.6-cython-nomkl-numpy1.14.json  6fd41e7b-conda-py3.6-cython-nomkl-numpy1.14.json  72e993c9-conda-py3.6-cython-nomkl-numpy1.14.json  73ea5e34-conda-py3.6-cython-nomkl-numpy1.14.json  755162d5-conda-py3.6-cython-nomkl-numpy1.14.json  76b6f57a-conda-py3.6-cython-nomkl-numpy1.14.json  7ee1847a-conda-py3.6-cython-nomkl-numpy1.14.json  7eea79ba-conda-py3.6-cython-nomkl-numpy1.14.json  816d8858-conda-py3.6-cython-nomkl-numpy1.14.json  859ef6c6-conda-py3.6-cython-nomkl-numpy1.14.json  8c35efe2-conda-py3.6-cython-nomkl-numpy1.14.json  8e0d3b12-conda-py3.6-cython-nomkl-numpy1.14.json  (+30 more)
